key.core/src/test/resources/de/uka/ilkd/key/java/coverage/rejected/lambda/Lambda.java
public class Lambda {
    Runnable r = () -> { };
    int f() { r.run(); return 1; }
}
